--- a/replace/victory_points_l_english.yml
+++ b/replace/victory_points_l_english.yml
@@ -738,16 +738,16 @@
  VICTORY_POINTS_3673:0 "클라겐푸르트"
  VICTORY_POINTS_9665:0 "벨스"
  VICTORY_POINTS_732:0 "린츠"
- VICTORY_POINTS_11612:0 "Villach"
- VICTORY_POINTS_11564:0 "Rijeka"
- VICTORY_POINTS_9809:0 "Podgorica"
- VICTORY_POINTS_9602:0 "Niš"
- VICTORY_POINTS_10203:0 "Corfu"
- VICTORY_POINTS_3914:0 "Ioannina"
- VICTORY_POINTS_1205:0 "Agrinio"
- VICTORY_POINTS_3844:0 "Kateríni"
- VICTORY_POINTS_3973:0 "Larissa"
- VICTORY_POINTS_863:0 "Karditsa"
+ VICTORY_POINTS_11612:0 "필라흐"
+ VICTORY_POINTS_11564:0 "리예카"
+ VICTORY_POINTS_9809:0 "포드고리차"
+ VICTORY_POINTS_9602:0 "니시"
+ VICTORY_POINTS_10203:0 "코르푸"
+ VICTORY_POINTS_3914:0 "이오아니나"
+ VICTORY_POINTS_1205:0 "아그리니오"
+ VICTORY_POINTS_3844:0 "카테리니"
+ VICTORY_POINTS_3973:0 "라리사"
+ VICTORY_POINTS_863:0 "카르디차"
  VICTORY_POINTS_3864:0 "Volos"
  VICTORY_POINTS_976:0 "Lamia"
  VICTORY_POINTS_7127:0 "Chalcis"
