--- a/replace/victory_points_l_english.yml
+++ b/replace/victory_points_l_english.yml
@@ -748,86 +748,86 @@
  VICTORY_POINTS_3844:0 "카테리니"
  VICTORY_POINTS_3973:0 "라리사"
  VICTORY_POINTS_863:0 "카르디차"
- VICTORY_POINTS_3864:0 "Volos"
- VICTORY_POINTS_976:0 "Lamia"
- VICTORY_POINTS_7127:0 "Chalcis"
- VICTORY_POINTS_3988:0 "Kórinthos"
- VICTORY_POINTS_7211:0 "Patras"
- VICTORY_POINTS_7096:0 "Argos"
- VICTORY_POINTS_11965:0 "Kalamáta"
- VICTORY_POINTS_12058:0 "Chania"
- VICTORY_POINTS_7193:0 "Limassol"
- VICTORY_POINTS_11767:0 "Vlorë"
- VICTORY_POINTS_12049:0 "Port Said"
- VICTORY_POINTS_4073:0 "Suez"
- VICTORY_POINTS_3996:0 "Giza"
- VICTORY_POINTS_11999:0 "Aswan"
- VICTORY_POINTS_2096:0 "Juba"
- VICTORY_POINTS_10833:0 "Berbera"
- VICTORY_POINTS_5068:0 "Hargeisa"
- VICTORY_POINTS_3581:0 "Prešov"
- VICTORY_POINTS_3288:0 "Memel"
- VICTORY_POINTS_3547:0 "Bonn"
- VICTORY_POINTS_3444:0 "Düsseldorf"
- VICTORY_POINTS_11905:0 "Alexandroupolis"
- VICTORY_POINTS_6652:0 "Craiova"
- VICTORY_POINTS_6727:0 "Cetatea Albă"
- VICTORY_POINTS_721:0 "Kherson"
- VICTORY_POINTS_406:0 "Mołodeczno"
- VICTORY_POINTS_11598:0 "Bolzano"
- VICTORY_POINTS_651:0 "Châteauroux"
- VICTORY_POINTS_8066:0 "Khuzdar"
- VICTORY_POINTS_5105:0 "Quetta"
- VICTORY_POINTS_12763:0 "Peshawar"
- VICTORY_POINTS_10887:0 "Lahore"
- VICTORY_POINTS_1910:0 "Kotli"
- VICTORY_POINTS_2054:0 "Jaipur"
- VICTORY_POINTS_53:0 "Stavanger"
- VICTORY_POINTS_9116:0 "Kirkenes"
- VICTORY_POINTS_11050:0 "Tromsø"
- VICTORY_POINTS_9296:0 "Kristiansand"
- VICTORY_POINTS_11420:0 "Amiens"
- VICTORY_POINTS_485:0 "Dieppe"
- VICTORY_POINTS_4611:0 "San José de David"
- VICTORY_POINTS_10879:0 "Ciudad Guayana"
- VICTORY_POINTS_4975:0 "Albuquerque"
- VICTORY_POINTS_4740:0 "Wichita"
- VICTORY_POINTS_7834:0 "Topeka"
- VICTORY_POINTS_9616:0 "Boise"
- VICTORY_POINTS_9515:0 "Regensburg"
- VICTORY_POINTS_11234:0 "Velikiye Luki"
- VICTORY_POINTS_9098:0 "Luga"
- VICTORY_POINTS_11336:0 "Roslavl"
- VICTORY_POINTS_382:0 "Kaluga"
- VICTORY_POINTS_9197:0 "Volkhov"
- VICTORY_POINTS_4354:0 "Sterlitamak"
- VICTORY_POINTS_10256:0 "Magnitogorsk"
- VICTORY_POINTS_6502:0 "Balakovo"
- VICTORY_POINTS_10312:0 "Kustanay"
- VICTORY_POINTS_11537:0 "Ural'sk"
- VICTORY_POINTS_3618:0 "Guryev"
- VICTORY_POINTS_392:0 "Ulyanovsk"
- VICTORY_POINTS_9258:0 "Penza"
- VICTORY_POINTS_6269:0 "Ivanovo"
- VICTORY_POINTS_6398:0 "Lipetsk"
- VICTORY_POINTS_11351:0 "Tambov"
- VICTORY_POINTS_11248:0 "Ryazan"
- VICTORY_POINTS_9131:0 "Vologda"
- VICTORY_POINTS_11476:0 "Millerovo"
- VICTORY_POINTS_775:0 "Salsk"
- VICTORY_POINTS_11724:0 "Elitsa"
- VICTORY_POINTS_11696:0 "Stavropol"
- VICTORY_POINTS_9628:0 "Ordzhonikidze"
- VICTORY_POINTS_9663:0 "Sochi"
- VICTORY_POINTS_719:0 "Novorossiysk"
- VICTORY_POINTS_487:0 "Mikhaylovka"
- VICTORY_POINTS_747:0 "Almería"
- VICTORY_POINTS_1176:0 "Granada"
- VICTORY_POINTS_6902:0 "Badajoz"
- VICTORY_POINTS_3874:0 "Salamanca"
- VICTORY_POINTS_858:0 "Toledo"
- VICTORY_POINTS_6832:0 "Ciudad Real"
- VICTORY_POINTS_6734:0 "Vigo"
+ VICTORY_POINTS_3864:0 "볼로스"
+ VICTORY_POINTS_976:0 "라미아"
+ VICTORY_POINTS_7127:0 "할키스"
+ VICTORY_POINTS_3988:0 "코린토스"
+ VICTORY_POINTS_7211:0 "파트라스"
+ VICTORY_POINTS_7096:0 "아르고스"
+ VICTORY_POINTS_11965:0 "칼라마타"
+ VICTORY_POINTS_12058:0 "하니아"
+ VICTORY_POINTS_7193:0 "리마솔"
+ VICTORY_POINTS_11767:0 "블로러"
+ VICTORY_POINTS_12049:0 "포트사이드"
+ VICTORY_POINTS_4073:0 "수에즈"
+ VICTORY_POINTS_3996:0 "기자"
+ VICTORY_POINTS_11999:0 "아스완"
+ VICTORY_POINTS_2096:0 "주바"
+ VICTORY_POINTS_10833:0 "베르베라"
+ VICTORY_POINTS_5068:0 "하르게이사"
+ VICTORY_POINTS_3581:0 "프레쇼프"
+ VICTORY_POINTS_3288:0 "메멜"
+ VICTORY_POINTS_3547:0 "본"
+ VICTORY_POINTS_3444:0 "뒤셀도르프"
+ VICTORY_POINTS_11905:0 "알렉산드로폴리스"
+ VICTORY_POINTS_6652:0 "크라이오바"
+ VICTORY_POINTS_6727:0 "체타테아알바"
+ VICTORY_POINTS_721:0 "헤르손"
+ VICTORY_POINTS_406:0 "말라제치나"
+ VICTORY_POINTS_11598:0 "볼차노"
+ VICTORY_POINTS_651:0 "샤토루"
+ VICTORY_POINTS_8066:0 "쿠즈다르"
+ VICTORY_POINTS_5105:0 "퀘타"
+ VICTORY_POINTS_12763:0 "페샤와르"
+ VICTORY_POINTS_10887:0 "라호르"
+ VICTORY_POINTS_1910:0 "코틀리"
+ VICTORY_POINTS_2054:0 "자이푸르"
+ VICTORY_POINTS_53:0 "스타방에르"
+ VICTORY_POINTS_9116:0 "시르케네스"
+ VICTORY_POINTS_11050:0 "트롬쇠"
+ VICTORY_POINTS_9296:0 "크리스티안산"
+ VICTORY_POINTS_11420:0 "아미앵"
+ VICTORY_POINTS_485:0 "디에프"
+ VICTORY_POINTS_4611:0 "산호세다비드"
+ VICTORY_POINTS_10879:0 "시우다드과야나"
+ VICTORY_POINTS_4975:0 "앨버커키"
+ VICTORY_POINTS_4740:0 "위치타"
+ VICTORY_POINTS_7834:0 "토피카"
+ VICTORY_POINTS_9616:0 "보이시"
+ VICTORY_POINTS_9515:0 "레겐스부르크"
+ VICTORY_POINTS_11234:0 "벨리키예루키"
+ VICTORY_POINTS_9098:0 "루가"
+ VICTORY_POINTS_11336:0 "로슬라블"
+ VICTORY_POINTS_382:0 "칼루가"
+ VICTORY_POINTS_9197:0 "볼호프"
+ VICTORY_POINTS_4354:0 "스테를리타마크"
+ VICTORY_POINTS_10256:0 "마그니토고르스크"
+ VICTORY_POINTS_6502:0 "발라코보"
+ VICTORY_POINTS_10312:0 "코스타나이"
+ VICTORY_POINTS_11537:0 "우랄스크"
+ VICTORY_POINTS_3618:0 "구리예프"
+ VICTORY_POINTS_392:0 "울리야놉스크"
+ VICTORY_POINTS_9258:0 "펜자"
+ VICTORY_POINTS_6269:0 "이바노보"
+ VICTORY_POINTS_6398:0 "리페츠크"
+ VICTORY_POINTS_11351:0 "탐보프"
+ VICTORY_POINTS_11248:0 "랴잔"
+ VICTORY_POINTS_9131:0 "볼로그다"
+ VICTORY_POINTS_11476:0 "밀레로보"
+ VICTORY_POINTS_775:0 "살스크"
+ VICTORY_POINTS_11724:0 "엘릿사"
+ VICTORY_POINTS_11696:0 "스타브로폴"
+ VICTORY_POINTS_9628:0 "오르조니키제"
+ VICTORY_POINTS_9663:0 "소치"
+ VICTORY_POINTS_719:0 "노보로시스크"
+ VICTORY_POINTS_487:0 "미하일롭카"
+ VICTORY_POINTS_747:0 "알메리아"
+ VICTORY_POINTS_1176:0 "그라나다"
+ VICTORY_POINTS_6902:0 "바다호스"
+ VICTORY_POINTS_3874:0 "살라망카"
+ VICTORY_POINTS_858:0 "톨레도"
+ VICTORY_POINTS_6832:0 "시우다드레알"
+ VICTORY_POINTS_6734:0 "비고"
  VICTORY_POINTS_9793:0 "Palma de Mallorca"
  VICTORY_POINTS_13071:0 "Santa Cruz de Tenerife"
  VICTORY_POINTS_4098:0 "Alicante"
