--- a/replace/victory_points_l_english.yml
+++ b/replace/victory_points_l_english.yml
@@ -828,68 +828,68 @@
  VICTORY_POINTS_858:0 "톨레도"
  VICTORY_POINTS_6832:0 "시우다드레알"
  VICTORY_POINTS_6734:0 "비고"
- VICTORY_POINTS_9793:0 "Palma de Mallorca"
- VICTORY_POINTS_13071:0 "Santa Cruz de Tenerife"
- VICTORY_POINTS_4098:0 "Alicante"
- VICTORY_POINTS_3945:0 "Cuenca"
- VICTORY_POINTS_9840:0 "Huesca"
- VICTORY_POINTS_7213:0 "Teruel"
- VICTORY_POINTS_6966:0 "Tortosa"
- VICTORY_POINTS_6927:0 "Gerona"
- VICTORY_POINTS_3790:0 "Portimão"
- VICTORY_POINTS_6880:0 "Faro"
- VICTORY_POINTS_9869:0 "Évora"
- VICTORY_POINTS_9787:0 "Viseu"
- VICTORY_POINTS_6996:0 "Guarda"
- VICTORY_POINTS_11673:0 "Braga"
- VICTORY_POINTS_3798:0 "Coimbra"
- VICTORY_POINTS_3118:0 "Funchal"
- VICTORY_POINTS_10329:0 "Zlatoust"
- VICTORY_POINTS_4824:0 "Tyumen"
- VICTORY_POINTS_12594:0 "Semipalatinsk"
- VICTORY_POINTS_1668:0 "Ayaguz"
- VICTORY_POINTS_1794:0 "Barnaul"
- VICTORY_POINTS_7789:0 "Tomsk"
- VICTORY_POINTS_7757:0 "Kemerovo"
- VICTORY_POINTS_9680:0 "Kerch"
- VICTORY_POINTS_6704:0 "Yalta"
- VICTORY_POINTS_10056:0 "Mersin"
- VICTORY_POINTS_3870:0 "Kayseri"
- VICTORY_POINTS_3951:0 "Eskişehir"
- VICTORY_POINTS_4512:0 "Diyarbakır"
- VICTORY_POINTS_11881:0 "Samsun"
- VICTORY_POINTS_9823:0 "Şanlıurfa"
- VICTORY_POINTS_7620:0 "Malatya"
- VICTORY_POINTS_11811:0 "İzmit"
- VICTORY_POINTS_6995:0 "Sinop"
- VICTORY_POINTS_6938:0 "Kastamonu"
- VICTORY_POINTS_11853:0 "Erzurum"
- VICTORY_POINTS_6935:0 "Van"
- VICTORY_POINTS_9777:0 "Sivas"
- VICTORY_POINTS_10041:0 "Denizli"
- VICTORY_POINTS_886:0 "Kahramanmaraş"
- VICTORY_POINTS_9878:0 "Afyon"
- VICTORY_POINTS_3942:0 "Deir az-Zur"
- VICTORY_POINTS_1056:0 "Homs"
- VICTORY_POINTS_6706:0 "Galati"
- VICTORY_POINTS_7476:0 "Belo Horizonte"
- VICTORY_POINTS_10999:0 "Vila Velha"
- VICTORY_POINTS_5112:0 "Santos"
- VICTORY_POINTS_9902:0 "Burgas"
- VICTORY_POINTS_12141:0 "Ya'an"
- VICTORY_POINTS_7294:0 "Liangshan"
- VICTORY_POINTS_10856:0 "Chamdo"
- VICTORY_POINTS_4999:0 "Kangding"
- VICTORY_POINTS_1010:0 "Zunyi"
- VICTORY_POINTS_10076:0 "Suzhou"
- VICTORY_POINTS_12019:0 "Huangshan"
- VICTORY_POINTS_6232:0 "Mozyr"
- VICTORY_POINTS_13010:0 "Hamilton"
- VICTORY_POINTS_4108:0 "Marrakech"
- VICTORY_POINTS_7081:0 "Annaba"
- VICTORY_POINTS_12051:0 "Constantine"
- VICTORY_POINTS_12034:0 "Batna"
- VICTORY_POINTS_11921:0 "Sfax"
- VICTORY_POINTS_7005:0 "Gabès"
- VICTORY_POINTS_3560:0 "Sedan"
- VICTORY_POINTS_1208:0 "Kuching"
+ VICTORY_POINTS_9793:0 "팔마데마요르카"
+ VICTORY_POINTS_13071:0 "산타크루스데테네리페"
+ VICTORY_POINTS_4098:0 "알리칸테"
+ VICTORY_POINTS_3945:0 "쿠엥카"
+ VICTORY_POINTS_9840:0 "우에스카"
+ VICTORY_POINTS_7213:0 "테루엘"
+ VICTORY_POINTS_6966:0 "토르토자"
+ VICTORY_POINTS_6927:0 "헤로나"
+ VICTORY_POINTS_3790:0 "포르티망"
+ VICTORY_POINTS_6880:0 "파로"
+ VICTORY_POINTS_9869:0 "에보라"
+ VICTORY_POINTS_9787:0 "비제우"
+ VICTORY_POINTS_6996:0 "구아르다"
+ VICTORY_POINTS_11673:0 "브라가"
+ VICTORY_POINTS_3798:0 "코임브라"
+ VICTORY_POINTS_3118:0 "푼샬"
+ VICTORY_POINTS_10329:0 "즐라토우스트"
+ VICTORY_POINTS_4824:0 "튜멘"
+ VICTORY_POINTS_12594:0 "세미팔라틴스크"
+ VICTORY_POINTS_1668:0 "아야쿠스"
+ VICTORY_POINTS_1794:0 "바르나울"
+ VICTORY_POINTS_7789:0 "톰스크"
+ VICTORY_POINTS_7757:0 "케메로보"
+ VICTORY_POINTS_9680:0 "케르치"
+ VICTORY_POINTS_6704:0 "얄타"
+ VICTORY_POINTS_10056:0 "메르신"
+ VICTORY_POINTS_3870:0 "카이세리"
+ VICTORY_POINTS_3951:0 "에스키셰히르"
+ VICTORY_POINTS_4512:0 "디야르바키르"
+ VICTORY_POINTS_11881:0 "삼순"
+ VICTORY_POINTS_9823:0 "샨리우르파"
+ VICTORY_POINTS_7620:0 "말라티아"
+ VICTORY_POINTS_11811:0 "이즈미트"
+ VICTORY_POINTS_6995:0 "시노프"
+ VICTORY_POINTS_6938:0 "카스타모누"
+ VICTORY_POINTS_11853:0 "에르주룸"
+ VICTORY_POINTS_6935:0 "반"
+ VICTORY_POINTS_9777:0 "시바스"
+ VICTORY_POINTS_10041:0 "데니즐리"
+ VICTORY_POINTS_886:0 "카라만마라슈"
+ VICTORY_POINTS_9878:0 "아피온"
+ VICTORY_POINTS_3942:0 "데이르에조르"
+ VICTORY_POINTS_1056:0 "홈스"
+ VICTORY_POINTS_6706:0 "갈라치"
+ VICTORY_POINTS_7476:0 "벨루오리존치"
+ VICTORY_POINTS_10999:0 "빌라벨랴"
+ VICTORY_POINTS_5112:0 "산투스"
+ VICTORY_POINTS_9902:0 "부르가스"
+ VICTORY_POINTS_12141:0 "야안"
+ VICTORY_POINTS_7294:0 "량산"
+ VICTORY_POINTS_10856:0 "창두"
+ VICTORY_POINTS_4999:0 "캉딩"
+ VICTORY_POINTS_1010:0 "쭌이"
+ VICTORY_POINTS_10076:0 "쑤저우"
+ VICTORY_POINTS_12019:0 "황산"
+ VICTORY_POINTS_6232:0 "마지르"
+ VICTORY_POINTS_13010:0 "해밀턴"
+ VICTORY_POINTS_4108:0 "마라케시"
+ VICTORY_POINTS_7081:0 "안나바"
+ VICTORY_POINTS_12051:0 "콩스탕틴"
+ VICTORY_POINTS_12034:0 "바트나"
+ VICTORY_POINTS_11921:0 "스팍스"
+ VICTORY_POINTS_7005:0 "가베스"
+ VICTORY_POINTS_3560:0 "스당"
+ VICTORY_POINTS_1208:0 "쿠칭"
