--- a/ITA_l_english.yml
+++ b/ITA_l_english.yml
@@ -37,20 +37,20 @@
 
  # Events
 
- r56_italy.1.t:0 "The King Removes Mussolini From Power"
- r56_italy.1.d:0 "Following an emergency meeting requested by King Victor Emmanuel III, the latter met with Mussolini, asking for his resignation, pointing in particular the enormous debt in which Italy finds itself and that the latter has not been able to resolve in almost fifteen years of power, the economic abyss that was the Ethiopian campaign, as well as the problems caused by the embargoes suffered following the invasion.\n\nUnder pressure from the Grand Council of Fascism, which began to turn against him, particularly under the influence of the royalists who tried to make a bigger place for themselves, Mussolini had no choice but to accept the order, not wishing to face prison. Pietro Badoglio was then appointed Prime Minister. The latter, despite his many links with the fascist administration, is seen as a much more moderate figure.\n\nIt is clear that the King is trying to save the face of Italy, whose situation is constantly falling apart."
- r56_italy.1.a:0 "Let's Hope The Situation Can Be Fixed"
+ r56_italy.1.t:0 "왕이 권좌에서 무솔리니를 몰아내다"
+ r56_italy.1.d:0 "비토리오 에마누엘레 3세가 긴급회의를 열고, 무솔리니와 만나 사임을 요구했습니다. 왕은 막대한 부채와 15년간 집권함에도 불구하고 해결하지 못한 경제 문제, 그리고 에티오피아 정복운동으로 인한 금수조치등의 문제를 지적했습니다.\n\n왕권을 강화하려는 세력의 영향으로 무솔리니는 사임할수 밖에 없었습니다. 피에트로 바돌리오는 수상으로 임명되었고 그는 파시스트 정권과의 많은 연관점이 있음에도 불구하고 훨씬 온건한 인물로 비춰집니다.\n\n왕이 이탈리아의 체면을 살리려고 끊임없이 노력하는 것은 분명합니다."
+ r56_italy.1.a:0 "이 상황이 나아지길 바라자"
 
- r56_italy.2.t:0 "The Ethiopian Armistice"
- r56_italy.2.d:0 "One of Badoglio's first objectives was to end the costly conflicts in Ethiopia. The new Foreign Minister, Alfredo Covelli, was sent to negotiate an end to hostilities between our two nations, and managed to negotiate peace, but forced us to pay some war reparations for the many civil destructions that took place during the conflict."
- r56_italy.2.a:0 "Better A Few Repairs Now Than A Permanent Economic Abyss"
+ r56_italy.2.t:0 "에티오피아와의 휴전 협정"
+ r56_italy.2.d:0 "바돌리오의 첫번째 목표중 하나는 에티오피아에서의 희생을 종식시키는 것이었습니다. 알프레도 코벨리 신임 외무장관은 양국간의 적대행위 중단을 위해 파견되었고, 평화협상을 진행할수 있었지만 많은 배상금을 지불하도록 강요받았습니다."
+ r56_italy.2.a:0 "영구적인 경제적 파탄보다 지금 회복해야 한다"
 
- r56_italy.3.t:0 "The New Cabinet"
- r56_italy.3.d:0 "A few days after his appointment as Prime Minister, Pietro Badoglio formed his new government. Even if Badoglio still claims to act on behalf of the Partito Nazional Fascista, the fascist influence has been reduced within the ministries, with the participation of many monarchists in the new cabinet, probably under the impulse of the king, concerned about the new problems that could arise from maintaining the economic and social policies of the fascists."
- r56_italy.3.a:0 "Out With The Old, In With The New"
+ r56_italy.3.t:0 "신내각"
+ r56_italy.3.d:0 "수상 임명 며칠 뒤 피에트로 바돌리오는 여전히 파시스트들을 등용할 것을 주장했지만, 왕의 간섭으로 많은 인사들이 교체되었습니다. 그 결과 파시즘의 영향력은 줄어들었습니다."
+ r56_italy.3.a:0 "새 술은 새 포대에"
 
- r56_italy.4.t:0 "Giovanni Messe's Proposition"
- r56_italy.4.d:0 "Giovanni Messe, Major General, former Commander of the Third Cavalry Division, and Minister of the Interior in the government of Pietro Badoglio, today approached the latter with a rather specific proposal. It was indeed clear to Messe that Badoglio's ultimate goal was the removal of the fascists from power.\n\nThe latter suggested using potential monarchists in Blackshirts and other organizations very close to the leaders of the Partito Nazional Fascista in order to eliminate the party's leading figures from within. Thus, once deprived of its leaders, the elimination of its last elements would be possible without having to shed too much blood."
+ r56_italy.4.t:0 "조반니 메세의 제의"
+ r56_italy.4.d:0 "피에트로 바돌리오 정부의 조반니 메세 소령, 제3기갑사단 사령관, 내무장관등은 다소 구체적인 제안을 하며 접근해 왔습니다. 바돌리오의 궁극적인 목표는 파시스트들을 권좌에서 몰아내는 것이었음이 메세에게는 분명했습니다.\n\n그리고 반대로 당의 주요 인사들을 제거하기 위하여 다른 단체들과 왕정주의자들을 기용할 것을 제안했습니다. 지도자들의 권한을 박탈하면 많은 피를 흘리지 않고도 파시즘을 제거할수 있을 것입니다."
  r56_italy.4.a:0 "By Destroying It Vital Points, The Movement Will Fall By Itself"
  r56_italy.4.b:0 "What If It Backfires ? We Do Not Need To Resort To Such Dangerous Methods"
 
@@ -635,58 +635,58 @@
 
 
 #Leaders
-POLITICS_ITALO_BALBO:0 "Italo Balbo"
-POLITICS_ITALO_BALBO_DESC: "Italo Balbo"
+POLITICS_ITALO_BALBO:0 "이탈로 발보"
+POLITICS_ITALO_BALBO_DESC: "이탈로 발보"
 
 #Ideas
- vittoria_mutilata:0 "Vittoria Mutilata"
- vittoria_mutilata_desc:0 "§LOur allies betrayed Italy and stabbed us in the back when they broke the Pact of London. We sacrificed so much blood at the Isonzo for their victory and they in turn denied us what was ours by right. Now Italy will take her destiny into her own hands and ensure that justice is done.§!"
- giovanni_messe:0 "Giovanni Messe"
- giovanni_messe_hc:0 "Giovanni Messe"
- ITA_giovanni_marinelli:0 "Giovanni Marinelli"
- ITA_gian_galeazzo_ciano:0 "Gian Galeazzo Ciano"
- ITA_roberto_farinacci:0 "Roberto Farinacci"
- ITA_dino_grandi:0 "Dino Grandi"
- ITA_serafino_mazzolini:0 "Serafino Mazzolini"
- ITA_giacomo_acerbo:0 "Giacomo Acerbo"
- ITA_junio_valerio_borghese:0 "Junio Valerio Borghese"
- ITA_paolo_thaon_di_revel:0 "Paolo Thaon di Revel"
- italo_balbo_pol:0 "Italo Balbo"
- victor_emmanuel:0 "Vittorio Emanuele III"
+ vittoria_mutilata:0 "비토리아 무틸라타"
+ vittoria_mutilata_desc:0 "§L우리의 동맹국은 런던조약을 깨고 이탈리아를 배신했습니다. 우리는 이존초 강에서 흘린 피를 보답받지 못했고, 우리의 권리를 부정당했습니다. 이제 이탈리아는 운명을 자신의 손에 맡기고 정의가 이루어져야 할 때입니다.§!"
+ giovanni_messe:0 "조반니 메세"
+ giovanni_messe_hc:0 "조반니 메세"
+ ITA_giovanni_marinelli:0 "지오바니 마리넬리"
+ ITA_gian_galeazzo_ciano:0 "갈레아초 치아노"
+ ITA_roberto_farinacci:0 "로베르토 파리나시"
+ ITA_dino_grandi:0 "디노 그란디"
+ ITA_serafino_mazzolini:0 "세라피노 마졸리니"
+ ITA_giacomo_acerbo:0 "기아코모 아케르보"
+ ITA_junio_valerio_borghese:0 "유니오 발레리오 보르그헤세"
+ ITA_paolo_thaon_di_revel:0 "파올로 타온 디 레벨"
+ italo_balbo_pol:0 "이탈로 발보"
+ victor_emmanuel:0 "비토리오 에마누엘 3세"
 
 ## Companies
-ansaldo_navy:0 "Ansaldo"
-ansaldo_navy_research:0 "Ansaldo"
-scrm:0 "Società Romana Costruzioni Meccaniche"
+ansaldo_navy:0 "안살도"
+ansaldo_navy_research:0 "안살도"
+scrm:0 "소키에타 로마나 코스트루지오니 메카니케"
 fnab:0 "FNAB"
-scotti:0 "Scotti"
-ansaldo:0 "Gio. Ansaldo & C."
-ansaldo_tank:0 "Ansaldo"
+scotti:0 "스코티"
+ansaldo:0 "기오. 안살도 & C."
+ansaldo_tank:0 "안살도"
 agip:0 "AGIP"
-glisenti:0 "Glisenti"
-metallurgica_bresciana:0 "Metallurgica Bresciana"
-franco_tosi:0 "Franco Tosi"
-isotta_fraschini:0 "Isotta Fraschini"
-bianchi:0 "Bianchi"
-officine_meccaniche:0 "Officine Meccaniche"
-fratelli_nardi:0 "Fratelli Nardi"
-astaldi:0 "Astaldi"
-pirelli:0 "Pirelli"
-maserati:0 "Maserati"
-giannini:0 "Giannini"
-ducati:0 "Ducati"
-bombrini_parodi_delfino:0 "Bombrini Parodi Delfino"
+glisenti:0 "글리센티"
+metallurgica_bresciana:0 "메탈루르기카 브레스키아나"
+franco_tosi:0 "프랑코 토시"
+isotta_fraschini:0 "이소타 프라스키니"
+bianchi:0 "비앙키"
+officine_meccaniche:0 "오피키네 메카니케"
+fratelli_nardi:0 "프라텔리 나르디"
+astaldi:0 "아스탈디"
+pirelli:0 "피렐리"
+maserati:0 "마세라티"
+giannini:0 "기안니니"
+ducati:0 "두카티"
+bombrini_parodi_delfino:0 "봄브리니 파로디 델피노"
 acraf_roma:0 "A.C.R.A.F"
-ferrari:0 "Auto Costruzioni Ferrari"
-societa_meridionale_elettricita:0 "Società Meridionale di Elettricità"
-societa_montecatini:0 "Società Montecatini"
-ferrovie_meridionali_sarde:0 "Ferrovie Meridionali Sarde"
-scotti:0 "Scotti"
-astaldi:0 "Astaldi"
-pirelli:0 "Pirelli"
+ferrari:0 "아우토 코스트루지오니 페라리"
+societa_meridionale_elettricita:0 "소키에타 메리디오날레 디 엘레트리키타"
+societa_montecatini:0 "소키에타 몬테카티니"
+ferrovie_meridionali_sarde:0 "페로비에 메리디오날리 사르데"
+scotti:0 "스코티"
+astaldi:0 "아스탈디"
+pirelli:0 "피렐리"
 
 #Traits
-ansaldo_tank_manufacturer:0 "Tank Designer"
-ansaldo_navy_manufacturer:0 "Naval Designer"
+ansaldo_tank_manufacturer:0 "전차 설계사"
+ansaldo_navy_manufacturer:0 "함선 "
 
  
