--- a/ICE_l_english.yml
+++ b/ICE_l_english.yml
@@ -1,42 +1,42 @@
 ﻿l_english:
 
  #FOCUS
- ICE_new_industry_tech:0 "New Industry"
- ICE_refineries:0 "Synthetic Experiments"
- ICE_extra_research_slot:0 "Technological Breakthroughs"
- ICE_full_metal:0 "Full Metal Doctrine"
- ICE_mobile_war_tech:0 "Mobile Warfare Doctrine"
- ICE_fast_armor:0 "Mobile Armor Focus"
- ICE_heaviest_tanks:0 "Heavy Tank Focus"
- ICE_special_forces:0 "Elite Troops Doctrine"
- ICE_mountain_forces:0 "Strong Mountaineers"
- ICE_marine_forces:0 "Strong Marines"
- ICE_marine_forces2:0 "Ready Marines"
- ICE_paratrooper_forces:0 "Ready Paratroopers"
- ICE_air_landings:0 "Landing Plans"
+ ICE_new_industry_tech:0 "새로운 산업"
+ ICE_refineries:0 "합성원료 실험"
+ ICE_extra_research_slot:0 "기술 혁신"
+ ICE_full_metal:0 "철갑 교리"
+ ICE_mobile_war_tech:0 "기동전 교리"
+ ICE_fast_armor:0 "기갑 중점"
+ ICE_heaviest_tanks:0 "중전차 중점"
+ ICE_special_forces:0 "특수부대 교리"
+ ICE_mountain_forces:0 "정예 산악병"
+ ICE_marine_forces:0 "정예 해병대"
+ ICE_marine_forces2:0 "해병대 준비"
+ ICE_paratrooper_forces:0 "공수부대 준비"
+ ICE_air_landings:0 "착륙 계획"
  ICE_airsea_tech:0 "Sea by Air"
  ICE_airsea_tech2:0 "Sea by Air"
  ICE_landsea_tech:0 "Land by Air"
  ICE_landsea_tech2:0 "Land by Air"
- ICE_rocketry1:0 "Rocketry Focus"
- ICE_air_doctrine_tech:0 "Air Doctrine Focus"
- ICE_naval_doctrine_tech:0 "Establish Coastguard Mission"
- ICE_heavy_ships:0 "Heavy Ship Effort"
- ICE_subs_tech:0 "Submarine Effort"
- ICE_lc_tech:0 "Light Cruiser Effort"
- ICE_destroyer_tech:0 "Destroyer Effort"
- ICE_nuclear:0 "Nuclear Effort"
- ICE_rocketry2:0 "Practical Rockets"
+ ICE_rocketry1:0 "로켓중점"
+ ICE_air_doctrine_tech:0 "공군 교리 중점"
+ ICE_naval_doctrine_tech:0 "해안경비대 임무 부여"
+ ICE_heavy_ships:0 "대형함 노력"
+ ICE_subs_tech:0 "잠수함 노력"
+ ICE_lc_tech:0 "경순양함 노력"
+ ICE_destroyer_tech:0 "구축함 노력"
+ ICE_nuclear:0 "핵개발 노력"
+ ICE_rocketry2:0 "실용 로켓"
  
- ICE_look_den_tt:0 "Boosts opinion and trade opinion with Denmark."
- ICE_close_eng_tt:0 "Boosts opinion and trade opinion with Great Britain."
- ICE_close_usa_tt:0 "Boosts opinion and trade opinion with the United States."
- ICE_abolish_althing_tt:0 "Stage a coup to overthrow the weak government. There will likely be some political instability following this."
- ICE_ikarus_tt:0 "In order to secure our safety, Germany will provide us with some Fallschirmjäger."
- ICE_vikings_tt:0 "Gain claims and cores in the scandinavian region as well as in Greenland and the Faroe Islands.\n"
- ICE_no_neutral_tt:0 "Does not have national spirit §YIcelandic Neutrality§!."
- ICE_end_neutral_tt:0 "Remove National Spirit §YIcelandic Neutrality§!.\n"
- ICE_create_ifv_tt:0 "Allows pick of IFV manufacturer."
+ ICE_look_den_tt:0 "덴마크와 무역관계 그리고 외교관계를 향상."
+ ICE_close_eng_tt:0 "대영제국과 무역관계 그리고 외교관계를 향상."
+ ICE_close_usa_tt:0 "미국과 무역관계 그리고 외교관계를 향상."
+ ICE_abolish_althing_tt:0 "나약한 정부를 교체하기 위해 쿠데타를 준비합니다. 이후 몇몇 정치적 불안정이 예상됩니다."
+ ICE_ikarus_tt:0 "우리의 안전보장을 위해 독일에서 팔슈름예거를 지원할것입니다."
+ ICE_vikings_tt:0 "스칸디나비아 지역과 그린란드, 페로제도의 클레임과 코어를 획득합니다.\n"
+ ICE_no_neutral_tt:0 "다음과 같은 국가정신 없음 §YIcelandic Neutrality§!."
+ ICE_end_neutral_tt:0 "국가정신 삭제 §YIcelandic Neutrality§!.\n"
+ ICE_create_ifv_tt:0 "보병전투차량 제조업체 선택 가능."
  ICE_island_defence_tt:0 "Adds §G10%§! §YArmy Defence§! to §YHome Defense§!.\n"
  ICE_advanced_weapons_tt:0 "Reduces §YArmy Training Time§! by §G5%§! and adds §G5%§! §YInfantry Weapon Reliability§! and §G5%§! §YArtillery Reliability§! to §YHome Defense§!."
  ICE_propaganda_tt:0 "Adds §G5%§! §YCore Attack and Defense§! and §G5%§! §YArmy Morale§! to §YHome Defense§!.\n"
@@ -45,42 +45,42 @@
  ICE_special_done_tt:0 "\nEnables production of §HElite Infantry§!"
  ICE_no_six:0 "§RYou will not recieve a sixth research slot if you have five already.§!"
  
- ICE_roads_program:0 "Roads Program"
- ICE_roads_program_desc:0 "Iceland is still a country of seperated peoples. We lack the infrastructure to even transport our people between our major cities and towns. This changes, now."
- ICE_look_den:0 "Look to Denmark"
- ICE_look_den_desc:0 "We may no longer be direct subjects of Denmark, but they are still our loyal allies and protectors. As Britain's subjects look to their mother country for guidance, so too do we look to Father Denmark for guidance."
- ICE_look_away:0 "Independant Foreign Policy"
- ICE_look_away_desc:0 "Denmark may have once ruled over us, but we now choose our own destiny. Even should we choose to keep our Union with Denmark, we must operate as an independant and sovereign country. Our allies are for us to choose."
- ICE_den_inf:0 "Danish Investment"
- ICE_den_inf_desc:0 "Our strong ties to Denmark means that we can use our connections to make our country look as promising as possible. This will increase the chances that Danish businesses will invest in our future. "
- ICE_domestic_ind:0 "Promote Domestic Industry"
- ICE_domestic_ind_desc:0 "Iceland's industrial capacity is laughable. We should make investment lucrative and offer incentives to those who open businesses and factories here in Iceland."
- ICE_den_mil_invest:0 "Danish Military Investment"
- ICE_den_mil_invest_desc:0 "Far from the volatile mainland, Iceland is the perfect location for building essential wartime materials. This truth is self-evident, now we just need to make Denmark realize this."
- ICE_den_research_collab:0 "Invite Danish Researchers"
- ICE_den_research_collab_desc:0 "To best make advances in every field we should compare notes with our Danish brethren. Two heads are better than one after all, especially when one of those heads is Icelandic!"
- ICE_new_industry:0 "New Industry Practices"
- ICE_new_industry_desc:0 "Iceland is not exactly thr picture of modern industrial superpower. In order to better compete we should study the techniques and technologies of our more industrial neighbors."
- ICE_den_invest_final:0 "Danish Interest in Iceland"
- ICE_den_invest_final_desc:0 "Denmark's interest in our infrastructure and industry has been growing stronger as of late. We should capitalize on this and get the capital needed in order to begun an expansion of our industrial capacity."
- ICE_look_out:0 "Look to the World"
- ICE_look_out_desc:0 "We have spent far too long isolated from the world. We must peer outside our borders and determine that which will best serve our people."
- ICE_end_neutrality:0 "Look to End the Policy of Neutrality"
- ICE_end_neutrality_desc:0 "We have long shared Denmark's policy of Neutrality. Current world situations however have forced us to conclude that neutrality is simply not an option that we can follow in good faith."
- ICE_refine_research:0 "Synthetic Materials Research"
- ICE_refine_research_desc:0 "Iceland lacks most natural resources that are useful for war, but perhaps we can look into techniques to produce useful materials without needing the rarer raw materials?"
- ICE_recycling_programs:0 "Recycling Programs"
- ICE_recycling_programs_desc:0 "Iceland cannot afford to lose what it makes. We need to look into ways of ensuring that even our broken tools have a use."
- ICE_infr_2:0 "Build up Icelandic Infrastructure"
- ICE_infr_2_desc:0 "Infrastrcture is more than just simple roads. We need bridges, dams, power cables, and other public necessities."
- ICE_mil_facs:0 "Invest in Arms Production"
- ICE_mil_facs_desc:0 "If we wish to retain our independance then we need to be able to defend ourselves with weapons made here in Iceland."
- ICE_war_manu:0 "Full War Economy"
- ICE_war_manu_desc:0 "War has come to Europe, and we Iceland has become involved in this struggle. The economy should reflect our current situation. "
- ICE_new_indu:0 "New Industrial Opportunities"
- ICE_new_indu_desc:0 "With the outside world finally looking to Iceland as a serious investment opportunity, our chance is now. Capitalization on this new interest can ensure our future in the world market."
- ICE_strong_neutral:0 "Enforce Icelandic Neutrality"
- ICE_strong_neutral_desc:0 "Iceland has made it clear that it intends to stay neutral in any upcoming wars, and we will do whatever we can to make sure that that neutrality remains unviolated."
+ ICE_roads_program:0 "도로계획"
+ ICE_roads_program_desc:0 "아이슬란드는 아직도 분열된 국가입니다. 우리는 기반시설이 부족해서 중심도시에서 마을로 사람들을 수송할 능력도 부족합니다. 이것은 바뀌어야 합니다. 당장."
+ ICE_look_den:0 "덴마크와 교섭"
+ ICE_look_den_desc:0 "우리는 더이상 덴마크의 지배하에 있지 않지만 그들은 우리의 믿을만한 동맹이자 보호자입니다. 영국의 식민지들이 모국의 지도를 받듯이 우리도 아버지 덴마크에게 지도를 받아야 합니다."
+ ICE_look_away:0 "독립적인 외교정책"
+ ICE_look_away_desc:0 "덴마크는 한때 우리를 지배하였지만 우리의 운명은 이제 우리가 정합니다. 우리는 주권국가로서 독자적인 외교전략을 세워야 합니다. 덴마크와의 연합을 유지할 선택마저도."
+ ICE_den_inf:0 "덴마크인의 투자"
+ ICE_den_inf_desc:0 "끈끈한 덴마크와의 관계는 우리의 경제계획에 도움이 되도록 해야합니다. 이는 덴마크인 사업가들의 투자를 늘려줄 것입니다."
+ ICE_domestic_ind:0 "국내산업 발전"
+ ICE_domestic_ind_desc:0 "아이슬란드의 산업역량은 비웃음을 받을만 합니다. 우리는 유리하게 투자해야하며 아이슬란드에서 사업하려는 사람들을 장려해야합니다."
+ ICE_den_mil_invest:0 "덴마크 군수업체 투자"
+ ICE_den_mil_invest_desc:0 "일촉즉발한 본토와는 달리 아이슬란드는 군수물자를 생산하기 알맞은 땅입니다. 이러한 분명한 사실을 덴마크에게 깨닫게 해줘야 합니다."
+ ICE_den_research_collab:0 "덴마크 과학자 초청"
+ ICE_den_research_collab_desc:0 "모든 분야에 전진하기 위해선 덴마크 동포들과 연구협력을 해야합니다. 두명의 머리가 한명의 머리보다 좋지 않겠습니까? 특히 그 한명이 아이슬란드 사람이라면요!"
+ ICE_new_industry:0 "신산업 정책"
+ ICE_new_industry_desc:0 "아이슬란드는 확실히 현대적인 산업열강과 거리가 멀어보입니다. 이를 극복하기 위해서는 주변 산업국가들의 기술과 테크닉을 배워야 합니다."
+ ICE_den_invest_final:0 "덴마크의 아이슬란드 흥미"
+ ICE_den_invest_final_desc:0 "최근들어 아이슬란드의 기반시설과 산업은 덴마크의 흥미를 끌기 시작하였습니다. 우리는 이를 더 확장하여 우리의 산업역량 개발에 투자할 돈을 받아내야 합니다."
+ ICE_look_out:0 "세계 무대를 보기"
+ ICE_look_out_desc:0 "우리는 오랫동안 세계에서 동떨어져 살아왔습니다. 우리는 외부세계와 접촉하고 우리 국민들에게 무엇이 이로울지 정해야 합니다."
+ ICE_end_neutrality:0 "중립정책 폐기 검토"
+ ICE_end_neutrality_desc:0 "우리는 오랫동안 덴마크의 중립정책을 따랐습니다. 하지만 세계 정세는 우리를 중립이 최선이 선택인지 고민되게 만들고 있습니다."
+ ICE_refine_research:0 "합성 원료 개발"
+ ICE_refine_research_desc:0 "아이슬란드는 전쟁에 필요한 자원이 부족합니다. 하지만 희귀한 원료가 필요없이 중요한 원료를 만들수 있는 기술이 있지 않을까요?"
+ ICE_recycling_programs:0 "재활용 정책"
+ ICE_recycling_programs_desc:0 "아이슬란드는 만들걸 낭비할수는 없습니다. 우리는 부서진 물건이라도 어딘가에 쓸모가 있는지 찾아봐야 합니다."
+ ICE_infr_2:0 "아이슬란드 기반시설 건설"
+ ICE_infr_2_desc:0 "기반시설은 단순한 도로가 아닙니다. 우리는 다리, 댐, 전선 등 공공시설이 필요합니다."
+ ICE_mil_facs:0 "군수산업 투자"
+ ICE_mil_facs_desc:0 "우리의 독립을 지키려면 우리는 아이슬란드 무기로 스스로 지켜야 합니다."
+ ICE_war_manu:0 "총력 전시경제"
+ ICE_war_manu_desc:0 "유럽에는 전쟁이 시작되었고 아이슬란드는 이 전쟁에 희말려들었습니다. 경제또한 이 상황에 알맞게 대응해야 합니다. "
+ ICE_new_indu:0 "새로운 산업 기회들"
+ ICE_new_indu_desc:0 "세계는 아이슬란드를 진지하게 새로운 투자지역으로 보기 시작하였고 기회는 지금입니다. 이 흥미를 자본화하면 세계시장에서 우리의 미래는 보장될것입니다."
+ ICE_strong_neutral:0 "아이슬란드식 중립을 지키기"
+ ICE_strong_neutral_desc:0 "아이슬란드는 다가오는 모든 전쟁들로부터 중립을 확고히 하였습니다. 그리고 우리는 그 중립을 지키기 위해 모든 노력을 할것입니다."
  ICE_close_eng:0 "Establish Close English Ties"
  ICE_close_eng_desc:0 "The British Empire is right at our border. We should look to them for friendship and mutual defence."
  ICE_close_usa:0 "Establish Close American Ties"
