--- a/IRE_l_english.yml
+++ b/IRE_l_english.yml
@@ -55,13 +55,13 @@
  IRE_armytwo:0 "국군"
  IRE_armytwo_desc:0 "내전이 끝나고 방위군이 창설된 이후 우리는 '국군'을 갖기를 꺼려왔습니다. 이제 전쟁이 다가옴에 따라, 우리는 우리의 군대를 재건해야 합니다."
  IRE_armythree:0 "특수 보병 부대"
- IRE_armythree_desc:0 "After the war, the Special Infantry Corps was established to counter the IRA and socialist threats and break up strikes. Now we can repurpose them for war."
+ IRE_armythree_desc:0 "전쟁 후 IRA와 사회주의적 위협에 대응하고 파업을 해산하키기 위해 특수 보병부대가 창설되었습니다. 이제 우리는 전쟁을 위해 그들의 용도를 바꿀 수 있습니다."
  IRE_tank:0 "전차 군단"
- IRE_tank_desc:0 "Establish and armored component to the armed forces."
+ IRE_tank_desc:0 "기갑부대를 창설하고 무장시켜야 합니다."
  IRE_ccp:0 "석탄-소 조약"
- IRE_ccp_desc:0 "To settle the Anglo-Irish trade war, we have agreed a pact with the British allowing better imports and exports of coal and cattle. This should free up some of our industry."
+ IRE_ccp_desc:0 "영국의 무역전쟁을 해결하기 위해, 우리는 영국과 석탄과 소의 더 나은 수입수출을 허용하는 협정에 동의했습니다. 이는 우리 산업의 일부를 해방시킬 것입니다."
  IRE_treet:0 "조약항 회수"
- IRE_treet_desc:0 "After the Irish independence war, we ceded some Irish ports to the British in the peace deal. However, we can reclaim these in our peace deal in the Anglo-Irish trade war to free up more industry for exports."
+ IRE_treet_desc:0 "아일랜드 독립 전쟁 후에, 우리는 평화 협정에서 영국인들에게 아일랜드 항구를 양도했습니다. 하지만, 우리는 영국-아일랜드 무역전쟁에서 평화협정으로 이것들을 되찾아 더 많은 수출산업을 자유롭게 할 수 있을 것입니다."
  IRE_coa:0 "에이레 (협의 완료) 법"
  IRE_coa_desc:0 "This Act will see the end of the Anglo-Irish trade war, allowing imports and exports to flow between our nations and give much industrial control back to Ireland."
  IRE_magfort:0 "매거진 요새"
@@ -98,37 +98,37 @@
  IRE_militarism_desc:0 "Ireland is one nation! And we will ensure it is united. We will reinforce the idea of a new Ireland, a united Ireland, under our Government."
  IRE_youth:0 "피어너 에런"
  IRE_youth_desc:0 "The Fianna Éireann were a nationalist youth organisation prominent in many events during the build up to the War of Independence - most notably the Easter Rising. We can establish a similair order under our Government to recruit the youth of Ireland."
- IRE_commissars:0 "Oifigeach Polaitiúil"
- IRE_commissars_desc:0 "The Comintern were very influential in James Larkin's rise to power and the establishment of his party. There is much we can learn from the Soviet Union, including their system of political officers."
- IRE_paramilitarism:0 "Óglaigh na hÉireann"
- IRE_paramilitarism_desc:0 "Ireland has a proud history of warriors, we are a nation built on war and soon we will have the greatest war we will ever face. We must rebuild our warrior culture to face the coming threats."
- IRE_techshare:0 "Bolster Irish Technology"
+ IRE_commissars:0 "정치장교"
+ IRE_commissars_desc:0 "코민테른은 제임스 라킨의 집권과 그의 당의 설립에 큰 영향을 끼쳤습니다. 그들의 정치장교 제도를 포함해서,우리가 소련으로부터 배울 수 있는 것은 많을 것입니다."
+ IRE_paramilitarism:0 "아일랜드 방위군"
+ IRE_paramilitarism_desc:0 "아일랜드는 전사들의 자랑스러운 역사를 가지고 있으며 우리는 전쟁으로 건국된 국가이며 곧 우리는 우리가 마주쳤던 그 어떤 전쟁보다도 거대한 전쟁을 겪게 될것입니다. 다가오는 위협에 맞서기 위해 우리의 전사 문화를 재건해야 합니다."
+ IRE_techshare:0 "아일랜드 기술 강화"
  IRE_techshare_desc:0 "By sharing technological advances with our allies, our whole faction will be able to conduct wartime R&D more efficiently."
- IRE_extra_tech_slot:0 "Extra Research Slot"
+ IRE_extra_tech_slot:0 "추가 연구슬롯"
  IRE_extra_tech_slot_desc:0 "Our industrial expansion and other recent advances might allow us to conduct more R&D in parallel."
- IRE_extra_tech_slot_2:0 "Extra Research Slot II"
+ IRE_extra_tech_slot_2:0 "추가 연구슬롯 II"
  IRE_extra_tech_slot_2_desc:0 "The rapid industrialization of our nation has opened up new opportunities in R&D that we should pursue."
- IRE_demo:0 "Fianna Fáil"
+ IRE_demo:0 "피어너 팔"
  IRE_demo_desc:0 "The Fianna Fáil Party was founded by Éamon de Valera, and is the primary democratic party in Ireland. They have been in power since 1932 and must continue to be if Ireland should remain democratic in these troubling times."
- IRE_def:0 "Island Defences"
+ IRE_def:0 "아일랜드 방어"
  IRE_def_desc:0 "Ireland has only just seen our independence, and there are many threats poised against us. After years of bloody war, it is time to build up our defences."
- IRE_intervene:0 "Intervene"
+ IRE_intervene:0 "개입"
  IRE_intervene_desc:0 "While Ireland is only just a small island, we may still have a sizable army, that could be sent into war with our democratic allies, if we neglect our home front."
- IRE_gallowglass:0 "Gallóglaigh"
+ IRE_gallowglass:0 "갈로글라"
  IRE_gallowglass_desc:0 "Anglicised as 'Gallowglass', the Gallóglaigh were primarily Norse-Scottish mercenaries, used by the Irish kings of old. The term can mean 'foreign warriors' and we can use this principle now, to send our own foreign legions to our allies."
- IRE_why_we_fight:0 "Channel The Mór-ríoghain"
+ IRE_why_we_fight:0 "모리안 방송"
  IRE_why_we_fight_desc:0 "The Morrigan were three sister-goddesses associated with war. They are an emblem of a proud and ancient history of war in Ireland, and even in these modern times of peace, we can show the world how proud the Irish can be."
- IRE_ourway:0 "Our Way"
+ IRE_ourway:0 "우리의 길"
  IRE_ourway_desc:0 "The world is in turmoil, and it is clear now more than ever that the imperialism of Britain, and the greediness of Axis powers has lead the world down a dark path. Aligning with any power would be a mistake, we shall go our own way, as Ireland!"
- IRE_freeni:0 "United Ireland"
+ IRE_freeni:0 "통합된 아일랜드"
  IRE_freeni_desc:0 "We must reunite our homeland, reunite Ireland. We have to retake this territory from Great Britain, to free our Irish brothers from the British imperialism."
- IRE_comintern:0 "Align With Comintern"
+ IRE_comintern:0 "코민테른과 함께"
  IRE_comintern_desc:0 "If we plan to go to war with Britain, we cannot do so alone. Ireland must align itself with the Comintern and hopefully seek an alliance to reclaim Northern Ireland."
- IRE_cominvasion:0 "Reclaim Northern Ireland"
+ IRE_cominvasion:0 "북아일랜드 영유권 재주장"
  IRE_cominvasion_desc:0 "With the backing of the Comintern and Soviet powers, we can invade Britain and reclaim Northern Ireland for the Republic of Ireland."
- IRE_belfast_blitz:0 "Belfast Blitz"
- IRE_axisalignger:0 "Irish aligned with Axis"
- IRE_axisalignuk:0 "Irish aligned with Axis"
+ IRE_belfast_blitz:0 "벨파스트 전격전"
+ IRE_axisalignger:0 "추축국과 함께하는 아일랜드"
+ IRE_axisalignuk:0 "아일랜드는 추축국과 함께한다"
  IRE_communist_ira:0 "Influence IRA's Ideology"
  IRE_communist_ira_desc:0 "Oppose to Monarchists and willing to unite, Ireland, the Irish republican army pursues goals that are compatible with ours. We must just show them the benefits that socialism will bring upon mankind."
  IRE_celtic_way:0 "The Celtic Way"
